<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">EyoLauncher</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name">Unknown Folder</string>
    <string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="system_widgets_title">"System Widgets"</string>
    <string name="widget_dims_format" translatable="false">%1$d x %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d x %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Apps Manager</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">System settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="menu_effect_setting">"Effect Setting"</string>
    <string name="menu_theme">"Theme"</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="delete_a_folder">This is a non-null folder and can\'t be deleted.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">"未命名"</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="workspace_cling_title">Make yourself at home</string>
    <string name="workspace_cling_move_item">You can put your favorite apps here.</string>
    <string name="workspace_cling_open_all_apps">To see all your apps, touch the circle.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="folder_cling_title">Organize your apps with folders</string>
    <string name="folder_cling_move_item">To move an app, touch &amp; hold it.</string>
    <string name="folder_cling_create_folder">To make a new folder on your Home screen, stack one app on top of another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="dummy_custom_cling_error_message">Error: custom workspace layout passed in but custom cling was not overwritten</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="custom_workspace_cling_title_1"></string>
    <string name="custom_workspace_cling_description_1"></string>
    <string name="custom_workspace_cling_title_2"></string>
    <string name="custom_workspace_cling_description_2"></string>
    <string name="baidu_search_text">Baidu Search</string>
    <string name="all_apps_list_tab_label">Apps List</string>
    <string name="folder_yiyou_soft_text">YiYou Soft</string>
    <string name="effect_settings">"Effect Settings"</string>
    <string name="pref_workspace_transition_effect_title">"Workspace transition effect"</string>
    <string name="pref_workspace_transition_effect_summary">"Scrolling effect when scrolling workspace"</string>
    <string name="pref_workspace_transition_effect_default">-1</string>
    <string name="pref_allapp_transition_effect_titile">"Apps/Widgets transition effect"</string>
    <string name="pref_allapp_transition_effect_summary">"Scrolling effect when scrolling Apps/Widgets"</string>
    <string name="pref_allapp_transition_effect_default">7</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="folder_safe_soft_text">安全</string>
    <string name="folder_tools_soft_text">工具</string>
    <string name="folder_recommend_soft_text">推荐</string>
    <string name="widget_just_used">"刚使用"</string>
    <string name="widget_always_used">"最常用"</string>
    <string name="widget_newinstall">"新安装"</string>
    <string name="widget_custom">"自定义"</string>
    <string name="launcher_data_loading">"正在加载桌面..."</string>
    <string name="launcherwallpaper">"壁纸"</string>
    <string name="launchertheme">"主题"</string>
    <string name="launchereffect">"特效"</string>
    <string name="launcherwidget">"小工具"</string>
    <string name="wallpaper_not_exist">"该文件可能不存在！"</string>
    <string name="local_wallpaper">本地壁纸</string>
    <string name="system_widget">系统小工具</string>
    <string name="launcher_max_screens">该桌面最多允许添加9屏！</string>
    <string name="screen_not_allow_add">该屏无法添加！</string>
    <string name="set_wallpaper_progress">正在设置壁纸,请不要退出程序</string>
    <string name="menu_test">test</string>
    <string name="apps_arrange_tip">"Please Arrange Apps For Convinence!"</string>
    <string name="apps_arrange">Applications Arrange</string>
    <string name="container_desktop">"Desktop"</string>
    <string name="add_folder">"+New Folder"</string>
    <string name="str_finish">"Finished"</string>
    <string name="container_hotseat">"Hotseat"</string>
    <string name="str_please_input">"Please Input"</string>
    <string name="str_confirm">"Confirm"</string>
    <string name="str_cancel">"Cancel"</string>
    <string name="str_ok">"OK"</string>
    <string name="folder_full_tip">"The folder is full!"</string>
    <string name="operate_success">"Operate Successfully!"</string>
    <string name="operate_fail">"Operate Failed!"</string>
    <string name="folder_name_long">"The folder name is too long!"</string>
    <string name="update_apps">"The Apps are being updated..."</string>
    <string name="move_application_successful">"The Application has been moved..."</string>
    <string name="move_application_failed">"Failed to move application..."</string>
    <string name="default_folder_name">"Unknown Folder"</string>
    <string name="shortcut_installed_fail">"Cant create the corresponding shortcut!"</string>
    <string name="app_is_adding">"Some App is being installed!"</string>
    <string name="folder_tools_text">Tools</string>
    <string name="folder_recommendation_text">Recommendation</string>
    <string name="folder_security_text">Security</string>
     <string name="apk_version_update">检测到新版本!</string>
     <string name="apk_version_update_now">立即更新</string>
     <string name="apk_version_update_later">稍后再说</string>
       <string name="apk_version_update_title">软件版本更新</string>
     <string name="apk_version_update_bk">隐藏</string>
     <string name="no_description">暂无介绍</string>
       <string name="check_update">检测更新</string>
     <string name="version_is_new">亲你当前已经是最新版本了!</string>
        <string name="check_update_ing">查询版本……</string>
	<string name="displaymode_dialog_title">切换显示方式</string>
</resources>